[package]
name = "game2048-rs"
version = "0.1.0"
edition = "2021"
authors = ["Hyejin Lee <genie4cs@gmail.com>"]
repository = "https://github.com/genieCS/game2048-rs"

[features]
default = ["crossterm-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
blt-backend = ["cursive/blt-backend"]

[dependencies]
maplit = "1.0"
rand = "0.8.4"

[dependencies.cursive]
version = "0.20"
default-features = false

[dependencies.cursive_buffered_backend]
# git = "https://github.com/gyscos/cursive_buffered_backend"
version = "0.6.0"

[dependencies.cursive-aligned-view]
version = "0.6.0"

[dependencies.reqwest]
version = "0.11"
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.3.1"
features = ["v4"]

[dependencies.crossterm]
version = "0.26.1"